@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-01-26] init_libTMCG(): added libgcrypt self-test
 * [2018-01-26] init_libTMCG(): check for already initialized libgcrypt
 * [2018-01-23] RFC4880: introduced new enumeration type tmcg_armor_t
 * [2018-01-22] RFC4880: added hash truncation for AsymmetricSignDSA()
